[package]
name = "minimix"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A mini audio library"
repository = "https://github.com/ThePJB/minimix"

[dependencies]
riff-wave = { version = "0.1.3", optional = true }
cpal = { version = "0.15.2", optional = true }
ringbuf = { version = "0.2", optional = true }
anyhow = { version = "1.0.12", optional = true }
minimg = { version = "0.1.1", optional = true }
minvect = { version = "0.1.0", optional = true }
rustfft = { version = "6.1.0", optional = true }

[dev-dependencies]
minimix = { path = ".", features = ["wav", "plot", "playback", "synth"] }

[features]
wav = ["riff-wave"]
playback = ["cpal", "ringbuf", "anyhow"]
plot = ["minimg", "minvect"]
synth = ["rustfft"]